# esp-idf-hello-world

./: .gitignore  partitions_esp32.csv  platformio.ini  sdkconfig  sdkconfig.esp32dev  sdkconfig.esp32dev.old  sdkconfig.esp32s3dev  sdkconfig.esp32s3dev.old  sdkconfig.old
components/cat_detect/: CMakeLists.txt  cat_detect.cpp  idf_component.yml
components/litter_robot_detect/: CMakeLists.txt  Kconfig  idf_component.yml  litter_robot_detect_common.cpp  litter_robot_detect_ppq.cpp  litter_robot_detect_tflite.cpp  model_data.h
components/litter_robot_detect_tflite/: CMakeLists.txt  idf_component.yml  litter_robot_detect_tflite.cpp  model_data.h
components/litter_robot_detect_tflite/include/: litter_robot_detect_tflite.hpp
main/: CMakeLists.txt  Kconfig.projbuild  camera_pin.h  hello_world_main.c  idf_component.yml  main.cpp  main.hpp  wifi_manager.cpp  wifi_manager.hpp
